agregué la página de productos

--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -20,7 +20,7 @@
                 <li><a href="./talleres.html">Talleres</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
                 <div class="carrito">
-                    <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-cart-shopping" style="color: #B08968;"></i>
                 </div>
             </ul>
         </nav>
