--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -17,11 +17,93 @@
                 <li><a href="./productos.html">Productos</a></li>
                 <li><a href="./talleres.html">Talleres</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+                <i class="fa-solid fa-cart-shopping" style="color: #B08968;"></i>
             </ul>
-                    </nav>
+        </nav>
     </header>
-
+    <h1 class="titulo-producto">Productos</h1>
+     <main class="productos">
+        <div class="card-producto">
+            <img src="../recursos/producto destacado 1.jpg" alt="vajilla ceramica">
+            <div>
+              <h5>Mate verde</h5>
+              <p>$4.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+        <div class="card-producto">
+            <img src="../recursos/producto destacado 4.jpg" alt="tetera azul">
+            <div>
+              <h5>Tetera Azul</h5>
+              <p>$10.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+        <div class="card-producto">
+            <img src="../recursos/producto destacado 7.jpg" alt="taza flor">
+            <div>
+              <h5>Juego de Taza y Plato</h5>
+              <p>$10.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+        <div class="card-producto">
+            <img src="../recursos/juego de 3 bowls.jpg" alt="Bowls Ceramica">
+            <div>
+              <h5>Juego de 3 Bowls</h5>
+              <p>$30.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+        <div class="card-producto">
+            <img src="../recursos/plato para sahumar.jpg" alt="Plato para Sahumar">
+            <div>
+              <h5>Plato para Sahumar</h5>
+              <p>$5.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+        <div class="card-producto">
+            <img src="../recursos/plato playo.jpg" alt="Plato Playo">
+            <div>
+              <h5>Plato playo pinceldas</h5>
+              <p>$10.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+        <div class="card-producto">
+            <img src="../recursos/porta sahumerio.jpg" alt="Porta Sahumerio">
+            <div>
+              <h5>Porta Sahumerio</h5>
+              <p>$3.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+        <div class="card-producto">
+            <img src="../recursos/posa torta.jpg" alt="Posa Torta">
+            <div>
+              <h5>Posa Torta</h5>
+              <p>$20.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+        <div class="card-producto">
+            <img src="../recursos/taza de té.jpg" alt="Taza de Té">
+            <div>
+              <h5>Taza de Té</h5>
+              <p>$7.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+        <div class="card-producto">
+            <img src="../recursos/taza pintitas.jpg" alt="Taza pintitas">
+            <div>
+              <h5>Taza Pintitas</h5>
+              <p>$9.000</p>
+              <a href="#">Comprar</a>
+            </div>
+        </div>
+     </main>
     <footer class="footer">
         <p class="texto">Piezas únicas de cerámica y talleres para todo público</p>
         <div class="redes">
