--- a/secciones/talleres.html
+++ b/secciones/talleres.html
@@ -17,7 +17,7 @@
                 <li><a href="./productos.html">Productos</a></li>
                 <li><a href="./talleres.html">Talleres</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
-                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+                <i class="fa-solid fa-cart-shopping" style="color: #B08968;"></i>
             </ul>
         </nav>
     </header>
