Acomode el nav bar y agregue SEO

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
+  <meta name="keywords" content="Cerámica, Vive Simple, Talleres, Piezas únicas, Personalizados">
+  <meta name="descripcion" content="En Vive Simple podrás comprar objetos de cerámica únicos hechos a mano y además realizar talleres para aprender desde cero">
   <script src="https://kit.fontawesome.com/96c761edc7.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
+  <title>Vive Simple</title>
 </head>
 
 <body>
