--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Vive Simple, Contacto, Mar del Plata, Cerámica, Talleres, Productos">
+    <meta name="descripcion" content="Para comunicarte con Vive Simple pueden enviarnos un mensaje sobre los talleres o productos, o visitrar nuestra sede en Mar del Plata">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/96c761edc7.js" crossorigin="anonymous"></script>
-    <title>Contacto</title>
+    <title>Contacto / Vive Simple</title>
 </head>
 <body>
     <header class="nav">
