--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Cerámica, Vive Simple, Nosotras, Nuestras Profes">
+    <meta name="descripcion" content="Vive Simple fue creado por dos apasiondas por la cerámica y brindamos talleres para compartir nuestra pasión">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/96c761edc7.js" crossorigin="anonymous"></script>
-    <title>Nosotros</title>
+    <title>Nosotros / Vive Simple</title>
 </head>
 
 <body>
