--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Vive Simple, Tazas, Platos, Bowls, Promos">
+    <meta name="descripcion" content="En nuestra tienda encontrarás piezas como tazas, platos, vasos y bowls. Además tenemos algunas promos de productos seleccionados">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/96c761edc7.js" crossorigin="anonymous"></script>
-    <title>Productos</title>
+    <title>Productos / Vive Simple</title>
 </head>
 <body>
     <header class="nav">
