--- a/secciones/talleres.html
+++ b/secciones/talleres.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Vive Simple, Talleres, Principiantes, Torno, Horneado">
+    <meta name="descripcion" content="Con nuestros talleres podrás aprender a crear piezas de cerámica sin tener conocimientos previos o especializarte en el torno para crear piezas únicas">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/96c761edc7.js" crossorigin="anonymous"></script>
-    <title>Talleres</title>
+    <title>Talleres / Vive Simple</title>
 </head>
 
 <body>
