--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+  <!-- Barra de Navegación --> 
+
   <header class="nav"> 
     <nav>
       <ul>
@@ -28,6 +31,9 @@
       </ul>
     </nav>
    </header>
+
+   <!-- Carrusel de imágenes -->
+
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -49,6 +55,9 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+  <!-- Productos destacados -->
+
   <section class="destacados">
     <h1 class="titulo">Productos Destacados</h1>
     <div>
@@ -62,11 +71,17 @@
       <img src="./recursos/producto destacado 7.jpg" alt="Porta Sahumerio Rosa">
     </div>
     </section>
+
+    <!-- Formulario de suscripción -->
+
     <form class="suscripcion">
       <p>Dejanos tu mail para recibir novedades sobre los talleres y las ofertas</p>
       <input type="email">
       <button>Enviar</button>
     </form>
+
+    <!-- Footer -->
+    
   <footer class="footer">
     <p class="texto">Piezas únicas de cerámica y talleres para todo público</p>
     <div class="redes">
