--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -10,6 +10,9 @@
     <title>Contacto / Vive Simple</title>
 </head>
 <body>
+
+    <!-- Barra de Navegación -->
+
     <header class="nav">
         <nav>
             <ul>
@@ -23,6 +26,9 @@
             </ul>
                     </nav>
     </header>
+
+    <!-- Nuestros datos -->
+
     <section class="datos">
         <h1>Contactanos</h1>
         <div class="contact">
@@ -31,6 +37,9 @@
         <p> Direccion: Avenida Independencia 2158</p>
     </div>
     </section>
+
+    <!-- Formulario de contacto -->
+
     <form class="formulario">
         <label>Nombre Completo</label>
         <input type="text" name="Nombre" class="nombrecompleto">
@@ -45,11 +54,17 @@
         <input type="text" class="mensaje">
         <button class="boton-formulario">Enviar</button>
     </form>
+
+    <!-- Nuestra ubicación / Mapa -->
+    
     <section class="ubicacion">
     <label>Nuestra ubicación</label>
     <br>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.018294668195!2d-57.558489424618486!3d-38.000033744705775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dea9ad2782ff%3A0x295353fb2dba8e03!2sAv.%20Independencia%202158%2C%20B7600DIR%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1691352787955!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
     </section> 
+
+    <!-- Footer -->
+
     <footer class="footer">
         <p class="texto">Piezas únicas de cerámica y talleres para todo público</p>
         <div class="redes">
