--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+
+    <!-- Barra de Navegación -->
+
     <header class="nav">
         <nav>
             <ul>
@@ -28,6 +31,8 @@
         </nav>
     </header>
     
+    <!-- Quienes somos / Historia -->
+
     <section>
         <h1 class="quienessomos">¿Quiénes somos?</h1>
         <p class="descripcion"> Somos Flor y Cami dos compañeras de secundario que llevan 15 años de amistad y que comparten el amor por la cerámica.
@@ -37,6 +42,9 @@
             y decorar sus piezas. Además, realizamos vajilla y objetos decorativos para vender y participamos de ferias de emprendedores para difundir nuestro trabajo.
         </p>
     </section>
+
+    <!-- Las profes -->
+    
     <h2>Nuestras Profes</h2>
     <main class="grilla-profes">
             <div>
@@ -63,7 +71,7 @@
         </div>
     </main>
 
-
+    <!-- Footer -->
 
     <footer class="footer">
         <p class="texto">Piezas únicas de cerámica y talleres para todo público</p>
