--- a/secciones/talleres.html
+++ b/secciones/talleres.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+
+    <!-- Barra de Navegación -->
+
     <header class="nav">
         <nav>
             <ul>
@@ -24,6 +27,9 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Talleres -->
+    
     <section class="talleres">
         <div class="taller1">
             <img src="../recursos/ceramica torno.jpg" alt="Ceramica en torno" class="torno">
@@ -36,6 +42,9 @@
             <p class="parrafotaller2">Para principiantes. Comenzamos desde cero. El curso es súper claro y demostrativo. El objetivo es que puedas concretar tus primeras piezas de cerámica !</p>
         </div>
     </section>
+
+    <!-- Footer -->
+
     <footer class="footer">
         <p class="texto">Piezas únicas de cerámica y talleres para todo público</p>
         <div class="redes">
