--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -10,6 +10,9 @@
     <title>Productos / Vive Simple</title>
 </head>
 <body>
+
+  <!-- Barra de Navegación -->
+
     <header class="nav">
       <nav>
             <ul>
@@ -23,6 +26,9 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Productos a la venta -->
+    
     <h1 class="titulo-producto">Productos</h1>
      <main class="productos">
         <div class="card-producto">
@@ -106,6 +112,9 @@
             </div>
         </div>
      </main>
+
+     <!-- Footer -->
+
     <footer class="footer">
         <p class="texto">Piezas únicas de cerámica y talleres para todo público</p>
         <div class="redes">
