--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
 
    <!-- Carrusel de imágenes -->
 
-  <div id="carouselExample" class="carousel slide">
+   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./recursos/carrusel 1.jpg" alt="logo de vivir simple cerámica">
+      <div class="carousel-item active" data-bs-interval="4000">
+        <img src="./recursos/Carrusel 1.png" class="d-block w-100" alt="logo vive simple">
       </div>
-      <div class="carousel-item">
-        <img src="./recursos/carrusel 2.jpg" alt="talleres de cerámica">
+      <div class="carousel-item" data-bs-interval="4000">
+        <img src="./recursos/Carrusel 2.png" class="d-block w-100" alt="fotos de talleres">
       </div>
-      <div class="carousel-item">
-        <img src="./recursos/carrusel 3.jpg" alt="productos de cerámica">
+      <div class="carousel-item" data-bs-interval="4000">
+        <img src="./recursos/Carrusel 3.png" class="d-block w-100" alt="fotos de productos">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
@@ -83,14 +83,15 @@
     <!-- Footer -->
     
   <footer class="footer">
-    <p class="texto">Piezas únicas de cerámica y talleres para todo público</p>
+    <p class="texto">Seguinos en nuestras redes sociales</p>
     <div class="redes">
-      <i class="fa-brands fa-facebook" style="color: #0c0c0c;"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-regular fa-envelope"></i>
+      <i class="fa-brands fa-facebook fa-xl" style="color: #0c0c0c;"></i>
+      <i class="fa-brands fa-instagram fa-xl"></i>
+      <i class="fa-regular fa-envelope fa-xl"></i>
     </div>
     <p class="contactanos">Contactanos</p>
     <p class="mailcontacto">vivesimpleceramica@gmail.com</p>
+    <p class="telefono">+54 9 223 5986321</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
