--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -66,14 +66,15 @@
     <!-- Footer -->
 
     <footer class="footer">
-        <p class="texto">Piezas únicas de cerámica y talleres para todo público</p>
+        <p class="texto">Seguinos en nuestras redes sociales</p>
         <div class="redes">
-            <i class="fa-brands fa-facebook" style="color: #0c0c0c;"></i>
-            <i class="fa-brands fa-instagram"></i> 
-            <i class="fa-regular fa-envelope"></i>
+            <i class="fa-brands fa-facebook fa-xl" style="color: #0c0c0c;"></i>
+            <i class="fa-brands fa-instagram fa-xl"></i> 
+            <i class="fa-regular fa-envelope fa-xl"></i>
         </div>
         <p class="contactanos">Contactanos</p>
         <p class="mailcontacto">vivesimpleceramica@gmail.com</p>
+        <p class="telefono">+54 9 223 5986321</p>
         </footer>
 </body>
 </html>
