--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -42,16 +42,16 @@
 
     <form class="formulario">
         <label>Nombre Completo</label>
-        <input type="text" name="Nombre" class="nombrecompleto">
+        <input type="text" name="Nombre" class="nombrecompleto" placeholder="Nombre Completo">
         <label>Email</label>
-        <input type="email" name="email" class="mail">
+        <input type="email" name="email" class="mail" placeholder="Email">
         <label>Tema</label>
         <select name="Tema" class="tema">
             <option value="Productos">Productos</option>
             <option value="Talleres">Talleres</option>
         </select>
         <label>Mensaje</label>
-        <input type="text" class="mensaje">
+        <input type="text" class="mensaje" placeholder="Escriba aquí su mensaje">
         <button class="boton-formulario">Enviar</button>
     </form>
 
