--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
       <img src="./recursos/producto destacado 4.jpg" alt="Tetera">
       <img src="./recursos/producto destacado 5.jpg" alt="Cuenco hojas">
       <img src="./recursos/producto destacado 6.jpg" alt="Cenicero rosas">
-      <img src="./recursos/producto destacado 6.jpg" alt="Taza Flor Verde">
+      <img src="./recursos/taza pintitas.jpg" alt="Taza pintitas">
       <img src="./recursos/producto destacado 7.jpg" alt="Porta Sahumerio Rosa">
+      <img src="./recursos/posa torta.jpg" alt="Posa Torta">
     </div>
     </section>
 
@@ -76,7 +77,7 @@
 
     <form class="suscripcion">
       <p>Dejanos tu mail para recibir novedades sobre los talleres y las ofertas</p>
-      <input type="email">
+      <input type="email" placeholder="Coloque aquí su mail">
       <button>Enviar</button>
     </form>
 
