agregue navbar de bootstrap

--- a/index.html
+++ b/index.html
@@ -17,18 +17,35 @@
 
   <!-- Barra de Navegación --> 
 
-  <header class="nav"> 
-    <nav>
-      <ul>
-        <img src="./recursos/Elegant_Circle_Signature_Photography_Logo__1_-removebg-preview.png" alt="LOGO"
-          class="logo">
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./secciones/nosotros.html">Nosotros</a></li>
-        <li><a href="./secciones/productos.html">Productos</a></li>
-        <li><a href="./secciones/talleres.html">Talleres</a></li>
-        <li><a href="./secciones/contacto.html">Contacto</a></li>
-        <i class="fa-solid fa-cart-shopping" style="color: #B08968;"></i>
-      </ul>
+  <header id="navegacion"> 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <img src="./recursos/Elegant_Circle_Signature_Photography_Logo__1_-removebg-preview.png" alt="logo-vivesimple" class="logo-vivesimple">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <section class="seccion-menu">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./secciones/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./secciones/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./secciones/talleres.html">Talleres</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./secciones/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      </div>
     </nav>
    </header>
 
@@ -37,13 +54,13 @@
    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="4000">
-        <img src="./recursos/Carrusel 1.png" class="d-block w-100" alt="logo vive simple">
+        <img src="./recursos/Carrusel-1.png" class="d-block w-100" alt="logo vive simple">
       </div>
       <div class="carousel-item" data-bs-interval="4000">
-        <img src="./recursos/Carrusel 2.png" class="d-block w-100" alt="fotos de talleres">
+        <img src="./recursos/Carrusel-2.png" class="d-block w-100" alt="fotos de talleres">
       </div>
       <div class="carousel-item" data-bs-interval="4000">
-        <img src="./recursos/Carrusel 3.png" class="d-block w-100" alt="fotos de productos">
+        <img src="./recursos/Carrusel-3.png" class="d-block w-100" alt="fotos de productos">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -61,15 +78,15 @@
   <section class="destacados">
     <h1 class="titulo">Productos Destacados</h1>
     <div>
-      <img src="./recursos/producto destacado 1.jpg" alt="Vajilla ceramica" class="destacado1">
-      <img src="./recursos/producto destacado 2.jpg" alt="Tazas conejo" class="destacado2">
-      <img src="./recursos/producto destacado 3.jpg" alt="Filtro de te">
-      <img src="./recursos/producto destacado 4.jpg" alt="Tetera">
-      <img src="./recursos/producto destacado 5.jpg" alt="Cuenco hojas">
-      <img src="./recursos/producto destacado 6.jpg" alt="Cenicero rosas">
-      <img src="./recursos/taza pintitas.jpg" alt="Taza pintitas">
-      <img src="./recursos/producto destacado 7.jpg" alt="Porta Sahumerio Rosa">
-      <img src="./recursos/posa torta.jpg" alt="Posa Torta">
+      <img src="./recursos/producto-destacado-1.jpg" alt="Vajilla ceramica" class="destacado1">
+      <img src="./recursos/producto-destacado-2.jpg" alt="Tazas conejo" class="destacado2">
+      <img src="./recursos/producto-destacado-3.jpg" alt="Filtro de te">
+      <img src="./recursos/producto-destacado-4.jpg" alt="Tetera">
+      <img src="./recursos/producto-destacado-5.jpg" alt="Cuenco hojas">
+      <img src="./recursos/producto-destacado-6.jpg" alt="Cenicero rosas">
+      <img src="./recursos/taza-pintitas.jpg" alt="Taza pintitas">
+      <img src="./recursos/producto-destacado-7.jpg" alt="Porta Sahumerio Rosa">
+      <img src="./recursos/posa-torta.jpg" alt="Posa Torta">
     </div>
     </section>
 
