--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -13,19 +13,37 @@
 
     <!-- Barra de Navegación -->
 
-    <header class="nav">
-        <nav>
-            <ul>
-                <img src="../recursos/Elegant_Circle_Signature_Photography_Logo__1_-removebg-preview.png" alt="LOGO" class="logo">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./talleres.html">Talleres</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <i class="fa-solid fa-cart-shopping" style="color: #B08968;"></i>
-            </ul>
-                    </nav>
-    </header>
+    <header id="navegacion"> 
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <img src="../recursos/Elegant_Circle_Signature_Photography_Logo__1_-removebg-preview.png" alt="logo-vivesimple" class="logo-vivesimple">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <section class="seccion-menu">
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../secciones/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../secciones/productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../secciones/talleres.html">Talleres</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </section>
+          </div>
+        </nav>
+       </header>
 
     <!-- Nuestros datos -->
 
