--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -15,21 +15,37 @@
 
     <!-- Barra de Navegación -->
 
-    <header class="nav">
-        <nav>
-            <ul>
-                <img src="../recursos/Elegant_Circle_Signature_Photography_Logo__1_-removebg-preview.png" alt="LOGO" class="logo">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./talleres.html">Talleres</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <div class="carrito">
-                    <i class="fa-solid fa-cart-shopping" style="color: #B08968;"></i>
-                </div>
-            </ul>
+    <header id="navegacion"> 
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <img src="../recursos/Elegant_Circle_Signature_Photography_Logo__1_-removebg-preview.png" alt="logo-vivesimple" class="logo-vivesimple">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <section class="seccion-menu">
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../secciones/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../secciones/productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../secciones/talleres.html">Talleres</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </section>
+          </div>
         </nav>
-    </header>
+       </header>
     
     <!-- Quienes somos / Historia -->
 
@@ -48,7 +64,7 @@
     <h2>Nuestras Profes</h2>
     <main class="grilla-profes">
             <div>
-            <img src="https://res.cloudinary.com/dbpcne3zt/image/upload/v1694423400/proyecto%20%20final%20desarrollo/profe_1_macsaf.jpg" alt="Profe Flor">
+            <img src="../recursos/profe-1.jpg" alt="Profe Flor">
             <h5 class="carta-titulo">Florencia Gómez</h5>
             <p class="carta-texto">Apasionada por la cerámica y las artesanías. Amante de los animales
                 y las actividades al aire libre. Extrovertida y charlatana.
@@ -56,7 +72,7 @@
         </div>
 
         <div>
-            <img src="https://res.cloudinary.com/dbpcne3zt/image/upload/v1694423400/proyecto%20%20final%20desarrollo/profe_2_zal3yd.jpg" alt="Profe Cami">
+            <img src="../recursos/profe-2.jpg" alt="Profe Cami">
             <h5 class="carta-titulo">Camila Peralta</h5>
             <p class="carta-texto">Abogada penal que en su tiempo libre se dedica a dar clases de cerámica. Enamorada
                 del arte y muy detallista. Mamá de Santino de 3 años y de sus 2 gatitos. 
@@ -64,7 +80,7 @@
         </div>
 
         <div>
-        <img src="https://res.cloudinary.com/dbpcne3zt/image/upload/v1694423400/proyecto%20%20final%20desarrollo/profe_rcximl.jpg" alt="Profe Mica">
+        <img src="../recursos/profe-32.jpg" alt="Profe Mica">
         <h5 class="carta-titulo">Micaela Núñez</h5>
         <p class="carta-texto">Técnica ceramista especializada en torno. Profe de cerámica y de dibujo sobre lienzo. 
             Amante de los animales, vegetariana y ambientalista. </p>
