--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -13,26 +13,44 @@
 
   <!-- Barra de Navegación -->
 
-    <header class="nav">
-      <nav>
-            <ul>
-                <img src="../recursos/Elegant_Circle_Signature_Photography_Logo__1_-removebg-preview.png" alt="LOGO" class="logo">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./talleres.html">Talleres</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <i class="fa-solid fa-cart-shopping" style="color: #B08968;"></i>
-            </ul>
-        </nav>
-    </header>
+  <header id="navegacion"> 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <img src="../recursos/Elegant_Circle_Signature_Photography_Logo__1_-removebg-preview.png" alt="logo-vivesimple" class="logo-vivesimple">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <section class="seccion-menu">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../secciones/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/talleres.html">Talleres</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      </div>
+    </nav>
+   </header>
 
     <!-- Productos a la venta -->
     
     <h1 class="titulo-producto">Productos</h1>
      <main class="productos">
         <div class="card-producto">
-            <img src="../recursos/producto destacado 1.jpg" alt="vajilla ceramica">
+            <img src="../recursos/producto-destacado-1.jpg" alt="vajilla ceramica">
             <div>
               <h5>Mate verde</h5>
               <p>$4.000</p>
@@ -40,7 +58,7 @@
             </div>
         </div>
         <div class="card-producto">
-            <img src="../recursos/producto destacado 4.jpg" alt="tetera azul">
+            <img src="../recursos/producto-destacado-4.jpg" alt="tetera azul">
             <div>
               <h5>Tetera Azul</h5>
               <p>$10.000</p>
@@ -48,7 +66,7 @@
             </div>
         </div>
         <div class="card-producto">
-            <img src="../recursos/producto destacado 7.jpg" alt="taza flor">
+            <img src="../recursos/producto-destacado-7.jpg" alt="taza flor">
             <div>
               <h5>Juego de Taza y Plato</h5>
               <p>$10.000</p>
@@ -56,7 +74,7 @@
             </div>
         </div>
         <div class="card-producto">
-            <img src="../recursos/juego de 3 bowls.jpg" alt="Bowls Ceramica">
+            <img src="../recursos/juego-3-bowls.jpg" alt="Bowls Ceramica">
             <div>
               <h5>Juego de 3 Bowls</h5>
               <p>$30.000</p>
@@ -64,7 +82,7 @@
             </div>
         </div>
         <div class="card-producto">
-            <img src="../recursos/plato para sahumar.jpg" alt="Plato para Sahumar">
+            <img src="../recursos/plato-para-sahumar.jpg" alt="Plato para Sahumar">
             <div>
               <h5>Plato para Sahumar</h5>
               <p>$5.000</p>
@@ -72,7 +90,7 @@
             </div>
         </div>
         <div class="card-producto">
-            <img src="../recursos/plato playo.jpg" alt="Plato Playo">
+            <img src="../recursos/plato-playo.jpg" alt="Plato Playo">
             <div>
               <h5>Plato playo pinceldas</h5>
               <p>$10.000</p>
@@ -80,7 +98,7 @@
             </div>
         </div>
         <div class="card-producto">
-            <img src="../recursos/porta sahumerio.jpg" alt="Porta Sahumerio">
+            <img src="../recursos/porta-sahumerio.jpg" alt="Porta Sahumerio">
             <div>
               <h5>Porta Sahumerio</h5>
               <p>$3.000</p>
@@ -88,7 +106,7 @@
             </div>
         </div>
         <div class="card-producto">
-            <img src="../recursos/posa torta.jpg" alt="Posa Torta">
+            <img src="../recursos/posa-torta.jpg" alt="Posa Torta">
             <div>
               <h5>Posa Torta</h5>
               <p>$20.000</p>
@@ -96,7 +114,7 @@
             </div>
         </div>
         <div class="card-producto">
-            <img src="../recursos/taza de té.jpg" alt="Taza de Té">
+            <img src="../recursos/taza-de-té.jpg" alt="Taza de Té">
             <div>
               <h5>Taza de Té</h5>
               <p>$7.000</p>
@@ -104,7 +122,7 @@
             </div>
         </div>
         <div class="card-producto">
-            <img src="../recursos/taza pintitas.jpg" alt="Taza pintitas">
+            <img src="../recursos/taza-pintitas.jpg" alt="Taza pintitas">
             <div>
               <h5>Taza Pintitas</h5>
               <p>$9.000</p>
